# dialogix

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
backend/app/v1/: urls.py  views.py
backend/backend/: urls.py
backend/backend/settings/: base.py  local.py
chatbot/src/: config.py  memory.py
chatbot/src/chatbot/: basic_chatbot.py  hil.py  llm.py  main.py
chatbot/src/chatbot/utils/terminal/: __init__.py
chatbot/src/tests/: basic-chatbot.py
scripts/: basic_chatbot.py  config.py  human_in_loop.py  llm.py  log.py  tavily.py  tool_node.py
ui/: index.html  script.js  style.css
